findbugs fix!
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/configuration/trunk@141906 13f79535-47bb-0310-9956-ffa450edef68